5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1594_2425.log
== TEST (2019-04-04 13:04:03) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print(round(CM, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:04:41) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print(round(CM, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:04:41) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print(round(CM, 3))
-- EXECUTION TIME:
0.156846
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:04:41) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print(round(CM, 3))
-- EXECUTION TIME:
0.161208
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:05:52) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3)"Km/l")
-- ERROR:
File "XXXX", line 5
    print (round(CM, 3)"Km/l")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:05) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:06:20) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3),"Km/l")
-- EXECUTION TIME:
0.114269
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:51) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:07:36) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3),"Km/l")
-- EXECUTION TIME:
0.187135
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:04:55) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3), "Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:05:09) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3), "Km/l")
-- EXECUTION TIME:
0.184502
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:32:03) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:32:22) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3),"Km/l")
-- EXECUTION TIME:
0.233112
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:32:42) 
-- CODE:
DKM= float(input("distancia percorrida em KM:"))
CG= float(input("combustivel gasto em litros:"))

CM= DKM/CG
print (round(CM, 3),"km/l")
-- EXECUTION TIME:
0.257854
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
